# platform.upstream.libXvMC

./: .gitignore  ChangeLog  Makefile.am  configure.ac  libXvMC-1.0.7.tar.bz2.delta  libXvMC-1.0.7.tar.bz2.id  project.config  xvmc.pc.in
include/X11/extensions/: XvMClib.h
packaging/: baselibs.conf  libXvMC.changes  libXvMC.spec
src/: .cvsignore  Makefile.am  XvMC.c  XvMCWrapper.c  XvMClibint.h
